// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Color Picker renders field disabled 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="colorPicker"
  >
    <div
      class="clay-color-picker"
    >
      <input
        name="colorPicker"
        style="height: 0px; margin: 0px; padding: 0px; visibility: hidden; width: 0px;"
        type="text"
        value="#000000"
      />
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="btn clay-color-btn dropdown-toggle"
              disabled=""
              style="background: rgb(0, 0, 0);"
              title="000000"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-append"
        >
          <input
            aria-label="Color selection is 000000"
            class="form-control input-group-inset input-group-inset-before"
            disabled=""
            type="text"
            value="000000"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Field Color Picker renders field with helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="colorPicker"
  >
    <div
      class="clay-color-picker"
    >
      <input
        name="colorPicker"
        style="height: 0px; margin: 0px; padding: 0px; visibility: hidden; width: 0px;"
        type="text"
        value="#000000"
      />
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="btn clay-color-btn dropdown-toggle"
              style="background: rgb(0, 0, 0);"
              title="000000"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-append"
        >
          <input
            aria-label="Color selection is 000000"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="000000"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
    <span
      class="form-text"
    >
      Helptext
    </span>
  </div>
</div>
`;

exports[`Field Color Picker renders field with label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="colorPicker"
  >
    <p
      class="ddm-label"
    >
      label
    </p>
    <div
      class="clay-color-picker"
    >
      <input
        name="colorPicker"
        style="height: 0px; margin: 0px; padding: 0px; visibility: hidden; width: 0px;"
        type="text"
        value="#000000"
      />
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="btn clay-color-btn dropdown-toggle"
              style="background: rgb(0, 0, 0);"
              title="000000"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-append"
        >
          <input
            aria-label="Color selection is 000000"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="000000"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
    <span
      class="form-text"
    >
      Helptext
    </span>
  </div>
</div>
`;
